# howard

./: .dockerignore  .env  .gitignore  Dockerfile  README  README.html  README.md  RELEASE_NOTES.html  RELEASE_NOTES.md  base.Dockerfile  docker-compose.yml  howard.Dockerfile  requirements-gui.txt  requirements-setup.txt  requirements.txt  setup-gui.cfg  setup.cfg
.github/workflows/: build.yml  docker-image.yml
config/: calculations_config.json  config.annotation.ini  config.ini  config.json  config.prioritization.ini  env.sh  param.annovar.json  param.databases.download.json  param.extann.json  param.json  param.snpeff.json  param.transcripts.json  param.yaml  preset-exome-analysis.json  preset-genome-analysis.json  prioritization_profiles.json  prioritization_transcripts_profiles.json
config/STARK/: config.annotation.stark.ini  config.ini  config.prioritization.stark.ini
config/default/: config.annotation.dbnsfp33a.ini  config.annotation.default.ini  config.annotation.hg19_dbnsfp35a.txt.ini  dbNSFP3.5a.readme.txt
docs/: Annotation.md  HEADER  INSTALLATION  README  REQUIREMENTS  config.annotation.default.ini  config.annotation.hg19_dbnsfp35c.txt.ini  config.prioritization.default.ini  docs.html  docs.md  docs.sh  example.MultiINDEL.vcf  example.full.vcf  example.multicallers.vcf  example.simple.vcf  example.vcf  help.config.calculation.html  help.config.calculation.md  help.config.html  help.config.json  help.config.md  help.config.prioritization.html  help.config.prioritization.md  help.configuration.calculation.html  help.configuration.calculation.md  help.configuration.html  help.configuration.md  help.configuration.prioritization.html  help.configuration.prioritization.md  help.html  help.md  help.param.databases.html  help.param.databases.json  help.param.databases.md  help.param.html  help.param.json  help.param.md  help.parameters.databases.html  help.parameters.databases.md  help.parameters.html  (+8 more)
docs/json/: help.config.json  help.configuration.calculation.json  help.configuration.json  help.configuration.prioritization.json  help.param.databases.json  help.param.json  help.parameters.databases.json  help.parameters.json
docs/pdoc/: howard.html  index.html  search.js
docs/test/: example.vcf
howard/: __init__.py  commons.py  gooey_config.json  gui.py  main.py  utils.py
howard/functions/: __init__.py  commons.py  databases.py  from_annovar.py  from_extann.py  plugins.py  utils.py
howard/objects/: __init__.py  annotation.py  cdna.py  database.py  genome.py  hgvs.py  transcript.py  variant.py  variants.py
howard/tools/: __init__.py  annotation.py  annovar_to_vcf.py  calculation.py  convert.py  databases.py  download.py  gui.py  (+11 more)
misc/: functions.py
plugins/: README.html  README.md  __init__.py
tests/: test_annotation.py  test_commons.py  test_databases.py  test_databases_alphamissense.py  test_databases_annovar.py  test_databases_dbnsfp.py  test_databases_dbsnp.py  test_databases_exomiser.py  test_databases_from_annovar.py  test_databases_from_extann.py  test_databases_genomes.py  test_databases_hgmd.py  test_databases_refseq.py  test_databases_snpeff.py  test_download.py  test_from_annovar.py  test_main.py  test_needed.py  test_objects_cdna.py  test_objects_database.py  test_objects_hgvs.py  test_objects_variant.py  test_objects_variants.py  test_tools.py  test_tools_annotation.py  test_tools_calculation.py  test_tools_convert.py  test_tools_databases.py  test_tools_databases_from_annovar.py  test_tools_databases_from_extann.py  test_tools_from_annovar.py  test_tools_hgvs.py  test_tools_prioritization.py  test_tools_process.py  test_tools_query.py  test_tools_stats.py  test_tools_tools.py  test_utils.py  test_variants.py  test_variants_annotations.py  (+14 more)
toolbox/: HOWARD_VALIDATION.sh  README_generate.sh  config.annotation.STARK.sh  dbnsfp_to_config_annotation.sh  extractContig.sh
tools/: vcf_uniq_variant.py
(+251 files in other folders)
