[metadata]
name = howard
version = 0.11.0
description = Highly Open Workflow for Annotation & Ranking toward genomic variant Discovery
long_description_content_type = HOWARD annotates and prioritizes genetic variations, calculates and normalizes annotations, convert on multiple formats, query variations and generates statistics
keywords = VCF variant annotation ranking
author = Antony Le Bechec
author_email = bioinfo@chru-strasbourg.fr

[options]
python_requires = >=3.10, <3.11
packages = find:
install_requires =
    # conda install conda-forge::py-bgzip~=0.4
    pandas~=2.2
    duckdb~=1.0
    pyarrow~=16.1
    bio~=1.7
    pyvcf3~=1.0
    dask~=2023.12
    pytest~=8.2
    coverage~=7.5
    fastparquet~=2024.5
    polars~=0.20
    genomepy~=0.16
    flake8~=7.1
    lazy~=1.6
    pynose~=1.5
    pyfaidx~=0.8
    multiprocesspandas~=1.1
    bgzip~=0.4
    pgzip~=0.3
    mgzip~=0.2
    pysam~=0.22
    jproperties~=2.1
    psutil~=6.0
    markdown~=3.6
    tabulate~=0.9
    md_toc~=9.0
    numpy~=1.26


[options.entry_points]
console_scripts =
    howard = howard.main:main
