[metadata]
name = howard
version = 0.11.0
description = Highly Open Workflow for Annotation & Ranking toward genomic variant Discovery
long_description_content_type = HOWARD annotates and prioritizes genetic variations, calculates and normalizes annotations, convert on multiple formats, query variations and generates statistics
keywords = VCF variant annotation ranking
author = Antony Le Bechec
author_email = bioinfo@chru-strasbourg.fr

[options]
python_requires = >=3.10, <3.11
packages = find:
install_requires =
    # conda install conda-forge::py-bgzip~=0.4
    pandas~=2.2.0
    duckdb~=1.0.0
    pyarrow~=16.1.0
    bio~=1.7.0
    pyvcf3~=1.0.0
    dask~=2023.12.0
    pytest~=8.2.0
    coverage~=7.5.0
    fastparquet~=2024.5.0
    polars~=0.20.0
    genomepy~=0.16.0
    flake8~=7.1.0
    lazy~=1.6.0
    pynose~=1.5.0
    pyfaidx~=0.8.0
    multiprocesspandas~=1.1.0
    bgzip~=0.4.0
    pgzip~=0.3.0
    mgzip~=0.2.0
    pysam~=0.22.0
    jproperties~=2.1.0
    psutil~=6.0.0
    markdown~=3.6.0
    tabulate~=0.9.0
    md_toc~=9.0.0
    numpy~=1.26.0
    beautifulsoup4~=4.12.0
    pyBigWig~=0.3.0
    pypandoc_binary~=1.13.0


[options.entry_points]
console_scripts =
    howard = howard.main:main
