[metadata]
name = howard-ann
version = 0.12.2.0
description = HOWARD - Highly Open Workflow for Annotation & Ranking toward genomic variant Discovery
long_description = file: README.md
long_description_content_type = text/markdown
keywords = VCF, variant, annotation, ranking
author = Antony Le Bechec, Jean-Baptiste Lamouche
url = https://github.com/bioinfo-chru-strasbourg/howard
author_email = bioinfo@chru-strasbourg.fr
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
python_requires = >=3.10, <3.11
packages = find:
include_package_data = true
install_requires =
    pandas~=2.2.0
    duckdb~=1.0.0
    pyarrow~=16.1.0
    bio~=1.7.0
    pyvcf3~=1.0.0
    dask~=2023.12.0
    pytest~=8.2.0
    coverage~=7.5.0
    fastparquet~=2024.5.0
    polars~=0.20.0
    genomepy~=0.16.0
    flake8~=7.1.0
    lazy~=1.6.0
    pynose~=1.5.0
    pyfaidx~=0.8.0
    multiprocesspandas~=1.1.0
    bgzip~=0.4.0
    pgzip~=0.3.0
    mgzip~=0.2.0
    pysam~=0.22.0
    jproperties~=2.1.0
    psutil~=6.0.0
    markdown~=3.6.0
    tabulate~=0.9.0
    md_toc~=9.0.0
    numpy~=1.26.0
    beautifulsoup4~=4.12.0
    pyBigWig~=0.3.0
    cyvcf2~=0.31.0
    pypandoc_binary~=1.14.0
    pyfiglet~=1.0.0

[options.extras_require]
dev =
    cibuildwheel

[options.entry_points]
console_scripts =
    howard = howard.main:main
    howard-ann = howard.main:main
